# technical-challenges

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: publish-backend.yml  publish-frontend.yml  terraform.yml
argocd/: application.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/tests/: test_health.py
infrastructure/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infrastructure/modules/auth/: main.tf
infrastructure/modules/compute/: eks.tf  helm_lbc.tf  iam_lbc.tf  main.tf  outputs.tf  variables.tf  waf.tf
infrastructure/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/modules/frontend/: main.tf  outputs.tf  variables.tf
infrastructure/modules/network/: main.tf  outputs.tf  variables.tf
infrastructure/modules/worker/: main.tf  variables.tf
k8s/: deployment.yaml  service.yaml
