[project]
name = "mock-s3-api"
version = "0.1.0"
description = "FastAPI API with mock S3 data"
requires-python = ">=3.11"

dependencies = [
  "fastapi[standard]",
  "uvicorn[standard]",
]

[tool.ruff]
select = ["E", "F", "W"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

